# sybil-scorer

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  spec.md
.github/workflows/: pylint.yml  test.yml
docs/: features.rst  legos.rst  requirements-doc.txt
docs/source/: conf.py  features.custom.rst  flipside.rst  index.rst  modules.rst  plot.rst  sbdata.rst  sblegos.rst  sbutils.rst  utils.rst
input_example/: input.csv
jupyter/: normalize_contribution_data.ipynb  normalize_contribution_new_data.ipynb  normalize_contribution_new_data_update2601.ipynb
sbscorer/features/: __init__.py  conf.py  create_feature_df.py  create_features.py
sbscorer/flipside/: FlipsideApi.py
sbscorer/legos/: TransactionAnalyser.py
sbscorer/plot/: figures.py
sbscorer/sbdata/: FlipsideApi.py
sbscorer/sblegos/: FeatureCreator.py  Transaction.py  TransactionAnalyser.py
sbscorer/sblegos/features/: conf.py  create_features.py
sbscorer/sblegos/features/custom/: extract.py
sbscorer/sbutils/: LoadData.py
sbscorer/utils/: LoadData.py  MineEthTx.py  MinePolygonTx.py  MineTx.py
script/: demo_extract_eth_txs_oss.py  extract_all_txs.py  extract_all_txs_new_round.py  extract_eth_txs_oss.py  extract_etherscan_txs.py  extract_polygon_txs.py  extract_tags_labels.py
src/main/: extract_all_txs.py  extract_tags_labels.py
src/main/features/: conf.py
src/main/features/custom/: extract.py
src/main/flipside/: FlipsideApi.py
src/main/legos/: TransactionAnalyser.py
src/main/utils/: MinePolygonTx.py  processing.py
src/script/: extract_eth_txs_oss.py  extract_etherscan_txs.py  extract_tags_labels.py
src/test/flipside/: FlipsideApiTest.py
test/features/: tsfresh_features_test.py
test/flipside/: FlipsideApiTest.py
test/legos/: TransactionAnalyserTest.py
test/resources/: unique_address.csv
test/resources/test_address/: flipside_test_address.csv  tx_analyser_address.csv  tx_analyser_address_lcs.csv  unique_ctbt_address.csv
test/resources/transactions/ethereum/: 0x00000000000cd56832ce5dfbcbff02e7ec639bc9_tx.csv  0x000000df34e2422bb7744bc93ab7594d371e2d4e_tx.csv  0x00000bec592ec7c143c73dc85804962075827ecc_tx.csv  0x00000ce93aae3930abd880a4a9729c5618f3d691_tx.csv  0x0000ce08fa224696a819877070bf378e8b131acf_tx.csv  0x000aa644afae99d06c9a0ed0e41b1e61beca958d_tx.csv  (+7 more)
test/sbdata/: FlipsideApiTest.py
test/sblegos/: FeaturesTest.py  TransactionAnalyserTest.py  TransactionAnalyserTestCodium.py
test/sblegos/features/: tsfresh_features_test.py
test/sbutils/: LoadDataTest.py
test/utils/: LoadDataTest.py
