[metadata]
name = sybil-scorer
version = 0.0.0-beta1
author = Poupou
author_email = poupou@protonmail.com
description = A sybil scoring tool
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/poupou-web3/cluster-scorer
project_urls =
    Bug Tracker = https://github.com/poupou-web3/cluster-scorer/issues
    repository = https://github.com/poupou-web3/cluster-scorer
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/main
packages = find:
python_requires = >=3.10

[flipside, legos]
where = src/main